# src/swagger/swagger.yml
@@ -78,7 +78,7 @@ paths:
         '201':
           description: ''
       tags: *ref_1
-  /menu/{id}/menuitems:
+  /menu/{id}:
     get:
       operationId: Menucontroller_getMenuItemsById
       parameters:
@@ -89,11 +89,35 @@ paths:
             type: number
       responses:
         '200':
-          description: ''
+          description: Gives the order details by given id
+          content:
+            application/json:
+              examples:
+                success:
+                  description: Gives the menu details
+                  value:
+                    succes: true
+                    data:
+                      menuitem_id: 2
+                      menu_itemname: manchuria
+                      price: 10
+                      tax: 5
+                      date:
+                        createdDate: '2023-08-17T08:31:36.802Z'
+                        updatedDate: '2023-08-24T04:40:27.390Z'
+        '400':
+          description: Occurs when given Id is invalid
+          content:
+            application/json:
+              examples:
+                InvalidId:
+                  description: Occurs when given Id is invalid
+                  value:
+                    message: Given_id_is_not_found
       tags: *ref_1
   /menu/{id}/menuitem:
     post:
-      operationId: Menucontroller_createMenuItem
+      operationId: Menucontroller_addMenuItem
       parameters:
         - name: id
           required: true
@@ -107,8 +131,38 @@ paths:
             schema:
               $ref: '#/components/schemas/MenuItemDto'
       responses:
-        '201':
-          description: ''
+        '200':
+          description: Creates a new Menuitem
+          content:
+            application/json:
+              examples:
+                success:
+                  description: Creates a new Menu
+                  value:
+                    succes: true
+                    data:
+                      menu_itemname: Pancakes
+                      price: 20
+                      menus:
+                        menu_id: 1
+                        menu_name: lunch
+                        date:
+                          createdDate: '2023-08-17T08:58:58.467Z'
+                          updatedDate: '2023-08-17T08:58:58.467Z'
+                      menuitem_id: 17
+                      tax: 5
+                      date:
+                        createdDate: '2023-08-25T11:20:06.064Z'
+                        updatedDate: '2023-08-25T11:20:06.064Z'
+        '400':
+          description: Invalid id
+          content:
+            application/json:
+              examples:
+                MenuItemIdFound:
+                  description: Occurs when Menuid is not found
+                  value:
+                    message: Given_id_is_not_found
       tags: *ref_1
   /book/postQuestion:
     post:
@@ -666,7 +720,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
       tags: *ref_4
-  /Orders:
+  /order:
     post:
       operationId: OrderController_createOrder
       parameters: []
@@ -697,7 +751,7 @@ paths:
         - Orders
       security: &ref_6
         - bearer: []
-  /Orders/order/{id}:
+  /order/{id}:
     get:
       operationId: OrderController_getOrderDetailsById
       parameters:
@@ -777,7 +831,7 @@ paths:
                     statusCode: 404
       tags: *ref_5
       security: *ref_6
-  /Orders/ordername/{name}:
+  /order/byname/{name}:
     get:
       operationId: OrderController_getOrderDetailsByName
       parameters:
@@ -857,13 +911,13 @@ paths:
                     statusCode: 404
       tags: *ref_5
       security: *ref_6
-  /Orders/updateQuantity:
+  /order/itemquantity{name}:
     put:
       operationId: OrderController_updateOrderQuantity
       parameters:
         - name: name
           required: true
-          in: query
+          in: path
           schema:
             type: string
       requestBody:
@@ -940,27 +994,20 @@ paths:
                   value:
                     message: Id_with_given_customerName_is_not_avalaible
                     error: Bad Request
-                    statusCode: 400
                 InvalidMenuItem:
                   description: This error occurs when menuItemName  is not found
                   value:
                     message: Invalid_Menuitem_name
                     error: Bad Request
-                    statusCode: 400
       tags: *ref_5
       security: *ref_6
-  /Orders/menuItem:
+  /order/{menuItemid}:
     delete:
       operationId: OrderController_deleteMenuItem
       parameters:
-        - name: OrderId
+        - name: menuItemid
           required: true
-          in: query
-          schema:
-            type: number
-        - name: menuItem
-          required: true
-          in: query
+          in: path
           schema:
             type: number
       responses:
@@ -968,7 +1015,113 @@ paths:
           description: ''
       tags: *ref_5
       security: *ref_6
-  /Orders/{id}/updateStatus:
+  /order/{Orderid}:
+    delete:
+      operationId: OrderController_deleteOrder
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: number
+      responses:
+        '200':
+          description: ''
+      tags: *ref_5
+      security: *ref_6
+  /order/{id}/addItem:
+    put:
+      operationId: OrderController_addMenuItem
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: number
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/updateOrderDto'
+      responses:
+        '200':
+          description: >-
+            Updates the quantity with given menuitem name and quantity to be
+            placed
+          content:
+            application/json:
+              examples:
+                success:
+                  description: updates the menuItem and returns menuitem
+                  value:
+                    success: true
+                    data:
+                      succes: true
+                      data:
+                        orderItem_id: 17
+                        quantity: 31
+                        menuitems:
+                          menuitem_id: 4
+                          menu_itemname: Pancakes
+                          price: 10
+                          tax: 5
+        '400':
+          description: >-
+            Updates the quantity with given menuitem name and quantity to be
+            placed
+          content:
+            application/json:
+              examples:
+                quantityNull:
+                  description: This error occurs when quanitty is null
+                  value:
+                    message:
+                      - quantity should not be empty
+                    error: Bad Request
+                menuItemNull:
+                  description: This error occurs when quanitty is null
+                  value:
+                    message:
+                      - menuItem should not be empty
+                    error: Bad Request
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              examples:
+                AcceswithoutAuthorization:
+                  description: ' If the client attempts to access certain book-related endpoints without providing any authentication credentials'
+                  value:
+                    message: Authentication_is_required_to_access_the_resource.
+                ExpiredAuthenticationToken:
+                  description: >-
+                    When the client sends an authentication token that is
+                    invalid, expired, or not recognized by the server
+                  value:
+                    message: client's_token_is_not_valid_for_the_requested_operation
+        '403':
+          description: Forbidden
+          content:
+            application/json:
+              examples:
+                InsufficientPrivileges:
+                  description: ' If the client provides authentication credentials, but the credentials do not grant sufficient privileges to access a specific book-related operation'
+                  value:
+                    message: >-
+                      client_does_not_have_the_required_authorization_to_perform_the_requested_action.
+                RoleBasedAccessControl:
+                  description: >-
+                    If the API uses role-based access control, the server may
+                    respond with a 403 status code when a user with a certain
+                    role tries to access an operation that requires a higher
+                    role or specific permissions.
+                  value:
+                    message: >-
+                      User_with_this_role_is_not_permitted_to_access_the_resource
+      tags: *ref_5
+      security: *ref_6
+  /order/{id}/updateStatus:
     patch:
       operationId: OrderController_updatePaymentStatus
       parameters:
